# rinha-backend-2026-gpu-bruteforce

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.lb  LICENSE  README.md  docker-compose.yml  info.json  nginx.conf
scripts/: add_official_entry.py
src/: main.rs  shader.wgsl
