[package]
name = "rinha-gpu-bruteforce"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.20"
